--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,5 +8,9 @@
     "mongoose": "^8.16.4",
     "nodemon": "^3.1.10",
     "openai": "^5.10.1"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
